re-order and edit Humility chapter

--- a/Focus.tex
+++ b/Focus.tex
@@ -8,15 +8,16 @@
 
 %company and how you spend your time
 
-%Relentlessly prune bullshit, don't wait to do things that matter, and savor the time you have. That's what you do when life is short.
-% Paul Graham 
-%http://www.paulgraham.com/vb.html
+
 
 \smallQuote{LC_COMPANY}{You are whatever the company you keep is.}{Lord Chesterfield}{}{}
 \smallQuote{C_HONOR}{Let your mind dwell on examples of honour.}{Cicero}{}{} % cf machiavelli ?
 
 \smallQuote{RH_LIFERS}{Steer clear of lifers, the toxic and charlatans.\newline You become who you know.}{Ryan Holiday}{}
 \smallQuote{GBS_PIGS1}{Never wrestle with pigs, you both get dirty and the pig likes it.}{George Bernard Shaw}{RH_PIGS2}
+
+\smallQuote{PG_PB}{Relentlessly prune bullshit, don't wait to do things that matter, and savor the time you have. That's what you do when life is short\llink{http://www.paulgraham.com/vb.html}.}{Paul Graham}{}
+
 %todo: plenty of space above
 \cleartoleftpage
 \HugeQuote{T_GM}{From good men you will learn good things}{, if you mix with bad men you will destroy even your existing sense.}{Theognis}{}{} 
@@ -28,15 +29,15 @@
 \hugeQuote{H_OWN}{They should try to subordinate things to themselves}{ not themselves to things.}{Horace}{}{}
 
 \hugeQuote{FC_OWN}{The things you used to own}{. Now they own you}{Jack, Fight Club}{}{}
+
+\cleartorightpage
 %todo reposition
-\hugeQuote{HDT_BACK}{Never look back}{ unless you're planning to go that way.}{Henry David Thoreau}{}{}
+\hugeQuote{FP_BACK}{It's a long road there's no turning back}{}{Funki Porcini}{}
 
-%todo: possibly drop
-% \hugeQuote{FP_BACK}{It's a long road there's no turning back}{}{Funki Porcini}{}
+\HugeQuote{HDT_BACK}{Never look back}{ unless you're planning to go that way.}{Henry David Thoreau}{}{}
 
-%TODO possibly humility
+%TODO possibly humility ? 
 % \smallQuote{GBS_CBD}{Those who say it cannot be done should not interrupt those who are doing it}{George Bernard Shaw}{MA_NOW2}{}
-
 
 %task selection
 \cleartoleftpage	
@@ -64,7 +65,7 @@ Ask yourself at every moment \say{is this necessary?}}
 
 % \hugeQuote{MA_OBSERVE}{And so I'll treat them as the law that binds us requires}{. With kindness and with justice.\newline And the inconsequential things?\newline I'll do my best to treat them as they deserve.}{Marcus Aurelius}{}{}
 % todo reposition 
-\smallQuote{UB_DL}{Photography is a subtractive process, you have the whole world and you select a small square of it.}{Uta Birth}{TF_SLO}{}
+\hugeQuote{UB_DL}{Photography is a subtractive process}{, you have the whole world and you select a small square of it.}{Uta Birth}{TF_SLO}{}
 
 
 \HugeQuote{PD_DL}{There is nothing so useless}{ as doing efficiently that which should not be done at all.}{Peter Drucker}{}{}
