--- a/Humility.tex
+++ b/Humility.tex
@@ -1,32 +1,27 @@
 \input{HumilityIntro.tex}
 
 \cleartorightpage
-
-\HugeQuote{TD_UNIQUE}{You are not a beautiful and unique snowflake.}{}{Tyler Durden}{}{}
-
-%life / death
-
-\cleartorightpage
-
-\hugeQuote{IP_GAME}{After the game}{ the king and the pawn go back into the same box}{Italian Proverb}{}{}
-\hugeQuote{MA_LIVE}{You could leave this life right now.}{ Let that determine how you act.}{Marcus Aurelius}{}{}
-
-% help
-\cleartorightpage
-\hugeQuote{ST_GUIDE}{He who does not employ a guide cannot gain advantage from the ground.}{}{Sun Tzu}{}{}
-\hugeQuote{DLP_HELP}{Take the help.}{}{Danielle La Porte}{}{}
+\HugeQuote{ME_BEGIN}{Be willing}{ to be a beginner every single morning.}{Meister Eckhart}{EP_FOOL}{}{}
 
 
-%fate
+%%%life / death
+
 \cleartoleftpage
-\smallQuote{AS_LUCK}{Men of any worth soon come to see that they are in the hands of Fate and gratefully submit to be moulded by its teachings}{Arthur Schopenhauer}{} 
+
+\hugeQuote{MA_LIVE}{You could leave this life right now.}{ Let that determine how you act.}{Marcus Aurelius}{}{}
+\hugeQuote{S_DF}{No one has had so much divine favour}{ that they could guarantee themselves tomorow.}{Seneca}{E_MORTAL}{}
 \cleartorightpage
+\HugeQuote{IP_GAME}{After the game}{ the king and the pawn go back into the same box.}{Italian Proverb}{}{}
 
-\hugeQuote{E_LUCK}{Foolish is the man who delights in his good fortune, supposing it will never leave him.}{}{Euripides}{S_ENDURE}{}
-\hugeQuote{MT_VISIT}{If you're not humble}{ life will visit humility upon you}{Mike Tyson}{}{}
-\hugeQuote{MC_VISIT}{The moment you think you are successful}{, failure will be there for you}{Maurizio Cattelan}{}{}
+%%% help
+\cleartorightpage
+\hugeQuote{DLP_HELP}{Take the help.}{}{Danielle La Porte}{}{}
+\hugeQuote{ST_GUIDE}{He who does not employ a guide cannot gain advantage from the ground.}{}{Sun Tzu}{}{}
 
-\hugeQuote{MA_LUCK1}{To accept it without arrogance}{, to let it go with indifference}{Marcus Aurelius}{}{}
+
+%%%fate
+\cleartoleftpage
+\smallQuote{AS_LUCK}{Men of any worth soon come to see that they are in the hands of Fate and gratefully submit to be moulded by its teachings.}{Arthur Schopenhauer}{} 
 
 \smallQuote{MA_ALWAYS}{Everywhere, at each moment, you have the option:
 \begin{itemize}
@@ -34,32 +29,48 @@
 \item to treat each person as he should be treated
 \item to approach this thought with care, so that nothing irrational creeps in
 \end{itemize}}{Marcus Aurelius}{WG_JUDGE}{} % E_DLTF
+
+\cleartorightpage
+
+\hugeQuote{E_LUCK}{Foolish is the man who delights in his good fortune, supposing it will never leave him.}{}{Euripides}{S_ENDURE}{}
+\hugeQuote{MT_VISIT}{If you're not humble}{ life will visit humility upon you.}{Mike Tyson}{}{}
+\hugeQuote{MC_VISIT}{The moment you think you are successful}{, failure will be there for you.}{Maurizio Cattelan}{}{}
+
+\hugeQuote{MA_LUCK1}{To accept it without arrogance}{, to let it go with indifference.}{Marcus Aurelius}{}{}
+
 %growth mindset
 \cleartoleftpage
 
-
-\smallQuote{ME_BEGIN}{Be willing to be a beginner every single morning}{Meister Eckhart}{EP_FOOL}{}
 \smallQuote{MC_BOAST}{Boasting is what a boy does, because he has no real  effect on the world.}{Matthew Crawford}{C_BOAST}
 
 \smallQuote{C_BOAST}{A superior man is modest in his speech but exceeds in his actions.}{Confucious}{}{}
 
-\cleartorightpage
-\hugeQuote{RH_CHANGE}{Your opinion is either dependent on the facts or it's not;}{\newline
-When they change you should shift along with them}{Ryan Holiday}{JKZ_ENDURE}{The facts were always there, of course, just unclear or hidden. Think clearly about what you're looking at. cf. \ref{NT_FAIL}}
+%TODO review
+\smallQuote{GBS_CBD}{Those who say it cannot be done should not interrupt those who are doing it.}{George Bernard Shaw}{MA_NOW2}{}
 
-\hugeQuote{MA_CHANGE}{Remember that to change your mind}{ and accept correction are mere acts too}{Marcus Aurelius}{}{and so, under our control}
+\cleartorightpage
+\hugeQuote{RH_CHANGE}{Your opinion is either dependent on the facts or not;}{\newline
+When they change you should shift along with them.}{Ryan Holiday}{JKZ_ENDURE}{The facts were always there, of course, just unclear or hidden. Think clearly about what you're looking at. cf. \ref{NT_FAIL}}
+
+\hugeQuote{MA_CHANGE}{Remember that to change your mind}{ and accept correction are mere acts too.}{Marcus Aurelius}{BR_CHANGE}{and so, under our control}
 
 \hugeQuote{WS_FOOL}{The fool doth think he is wise and the wise man knows himself to be a fool}{}{William Shakespeare}{P_TALK}{}
 
-\hugeQuote{RG_CRITICISM}{Never be so self absorbed}{ as to believe that the master is interested in your criticisms of him, now matter how accurate they are}{Robert Greene}{}{but always be ready to listen and use the criticism you hear.}
+\hugeQuote{RG_CRITICISM}{Never be so self absorbed}{ as to believe that the master is interested in your criticisms of him, now matter how accurate they are.}{Robert Greene}{}{but always be ready to listen and use the criticism you hear.}
 
-\hugeQuote{JVG_VALUE}{A great failing}{: to see yourself as more than you are and value yourself at less than your true worth}{John Von Goethe}{}{} %cf p63
+\hugeQuote{JVG_VALUE}{A great failing}{: to see yourself as more than you are and value yourself at less than your true worth.}{John Von Goethe}{AG_WORK}{} %todo check link to p63 in original notes
 
-%bigger view
-\cleartorightpage
+%%%bigger view
+\cleartoleftpage
 \hugeQuote{JS_FOLLY}{It is the folly of many}{ to mistake the echo of a London coffee shop for the voice of a kingdom.}{Jonathan Swift}{}{}
+\hugeQuote{JDB_UNNAMED}{The unnamed should not be mistaken for the non-existent.}{}{Jon de la Brug\'{e}re}{}{}
 
-\hugeQuote{CTG_COUNSEL}{Diversity in counsel}{.\newline
+\cleartorightpage
+\HugeQuote{CTG_COUNSEL}{Diversity in counsel}{.\newline
 Unity in command.}{Cyrus the Great}{ST_GUIDE}{} % possibly move to confidence
 
-\hugeQuote{JDB_UNNAMED}{The unnamed should not be mistaken for the non-existent.}{}{Jon de la Brug\'{e}re}{}{}
+
+
+\cleartorightpage
+
+\HugeQuote{TD_UNIQUE}{You are not a beautiful and unique snowflake.}{}{Tyler Durden}{}{}
