add quotes from Tao Te Ching

--- a/Confidence.tex
+++ b/Confidence.tex
@@ -15,6 +15,8 @@ From within it you will find endless oppourtunities that elude other people.}{Ro
 
 %failure
 \cleartoleftpage
+\smallQuote{LT_STEP}{The greatest things in the world much be accomplished by the samllest.}{Lao Tzu}{}
+
 \smallQuote{RH_FAIL}{You've already made it this far, might as well take one more step.}{Ryan Holiday}{JP_STAND}
 
 \smallQuote{RG_FAIL}{Any kind of resistance or obstacle that crosses your path should be seen as yet another chance to improve your work.}{Robert Greene}{}
