--- a/Focus.tex
+++ b/Focus.tex
@@ -63,6 +63,9 @@ Ask yourself at every moment \say{is this necessary?}}
 
 \HugeQuote{MA_SMALL}{You're better off not giving the small things more time than they deserve}{}{Marcus Aurelius}{}
 
+\HugeQuote{LT_DL}{Choose one}{, reject the other.}{Lao Tzu}{}{}
+
+
 % \hugeQuote{MA_OBSERVE}{And so I'll treat them as the law that binds us requires}{. With kindness and with justice.\newline And the inconsequential things?\newline I'll do my best to treat them as they deserve.}{Marcus Aurelius}{}{}
 % todo reposition 
 \hugeQuote{UB_DL}{Photography is a subtractive process}{, you have the whole world and you select a small square of it.}{Uta Birth}{TF_SLO}{}
