--- a/Generosity.tex
+++ b/Generosity.tex
@@ -10,6 +10,8 @@
 
 \smallQuote{AL_JWWWB}{they are just what we would be in their situation}{Abraham Lincoln}{}{} 
 
+\smallQuote{LT_SELF}{No self interest? Self is fulfulled.}{Lao Tzu}{}
+
 %todo review
 \smallQuote{PS_RAGE}{Patience Wounded too often becomes rage.}{Publius Syrus}{}
 
@@ -25,11 +27,12 @@
 	\item surly
 \end{itemize}}{Marcus Aurelius}{SL_GIVE}{People are going to be like that from time to time and so long as you remember that you've been like that too you can see the behaviour for what it is.}
 
-
 %Roman playwright and poet Terence gave voice when he wrote: ‘I am human: nothing human is foreign to me’ 
 
 \hugeQuote{MA_HATE}{Someone hates me?}{ Their problem.\newline
 Mine: to be patient and cheeerful with everyone (including them)}{Marcus Aurelius}{}{}
+
+\hugeQuote{LT_HATE}{People who are good}{, I treat well. People who are not good, I also treat well.}{Lao Tzu}{}{}
 
 \HugeQuote{S_DO}{Kindness gives birth to kindness.}{}{Seneca}{}{}
 
