--- a/Leadership.tex
+++ b/Leadership.tex
@@ -62,8 +62,14 @@
 \hugeQuote{LT_CHIEF}{Be the chief}{ but never the lord.}{Lao Tzu}{}{}
 
 \hugeQuote{KR_SPORT}{One man practicing sportsmanship}{ is better than 100 teaching it.}{Knute Roche}{HF_REP}{}
+
+\hugeQuote{LT_NPP}{Has self-knowledge without self-display}{\newline
+Self-respect without pride.}{Lao Tzu}{}
+
 \cleartorightpage
 \HugeQuote{MR_CHIEF}{Kings soon perish}{ who make a habit of justifying their actions to their subjects by saying \say{I have the power} rather than \say{it is my duty}}{Musonius Rufus}{} 
+
+
 
 
 % did what he thought was right  
