--- a/Patience.tex
+++ b/Patience.tex
@@ -37,8 +37,12 @@ If there is no prospect of victory do not move.}{Sun Tzu}{}{}
 
 \hugeQuote{RG_TALK}{Once the words are out}{, you cannot take them back. Keep them under control.}{Robert Greene}{}{}
 \hugeQuote{RH_TALK}{The best advice I ever got}{ was \say{shut up}}{Ryan Holiday}{}{Always say less than necessary\llink{http://tcat.tc/1IwHzGd}.}
+\hugeQuote{LT_SL}{Those who know don't talk. Those who talk don't know.}{Lao Tzu}{}{}
+%\smallQuote{LT_SL}{Spare words: nature's way. Violent winds do not blow all morning.}{Lao Tzu}{}
+
 \cleartorightpage
 \HugeQuote{P_TALK}{Wise men speak because they have something to say}{; fools speak because they have to say something.}{Plato}{}{}
+
 
 %todo unsure, maybe generosity
 %%%%%%%%%%%%%%%%%%%%%%%%
@@ -57,6 +61,8 @@ If there is no prospect of victory do not move.}{Sun Tzu}{}{}
 % \hugeQuote{RG_ANGER}{Anger and emotion are strategically conterproductive}{. You must always stay calm and objective}{Robert Greene}{}{}
 
 \hugeQuote{LT_ANGER}{The best fighter is never angry.}{}{Lao Tzu}{}
+%\smallQuote{LT_BF}{The good soldier is not hot-tempered.}{Lao Tzu}{}
+
 
 \hugeQuote{MA_GRIEF}{How much more damage grief and ager do}{ than the things that caused them.}{Marcus Aurelius}{}{}
 
