--- a/Resilience.tex
+++ b/Resilience.tex
@@ -120,6 +120,10 @@ And always take note of Fortune's habit of behaving exactly as she pleases.}{Sen
 
 \hugeQuote{MA_PERSIST2}{Disgraceful}{ for the soul to give up while the body is still going strong.}{Marcus Aurelius}{}{}
 
+\HugeQuote{LT_ENDURE}{Don't cling to your body's woes}{.\newline
+Then you can learn endurance.}{Lao Tzu}{}
+
+
 \cleartoleftpage
 \hugeQuote{H_CHANGE}{Change is the only constant in life.}{}{Heraclitus}{}{}
 
@@ -138,8 +142,12 @@ And always take note of Fortune's habit of behaving exactly as she pleases.}{Sen
 \smallQuote{AS_ALONE}{The more a man has in himself, the less others can be to him.}{Arthur Schopenhauer}{} 
 % \smallQuote{RWE_ALONE}{Nothing can bring you peace but yourself.\newline
 % Nothing can bring you peace but the triumph of principles}{Ralph Waldo Emerson}{}
-\smallQuote{LT_CH}{He who conquers others is strong.\newline
-He who conquers himself is mighty.}{Lao Tzu}{}{} % todo update quote from my edition
+
+%\smallQuote{LT_CH}{He who conquers others is strong.\newline
+%He who conquers himself is mighty.}{Lao Tzu}{}{} % todo update quote from my edition
+
+\smallQuote{LT_SL}{Knowing others is intelligent.\newline
+Knowing yourself is enlightened.}{Lao Tzu}{}
 
 \cleartorightpage
 \HugeQuote{A_ALONE}{Happiness depends on ourselves.}{}{Aristotle}{}{}
