--- a/project.tex
+++ b/project.tex
@@ -53,6 +53,10 @@
 \chapter{Introduction}
 \input{Introduction.tex}
 
+\cleartorightpage
+
+\HugeQuote{LT_GA}{Great accomplishment seems unfinished but its use is continuous.}{Lao Tzu}{}{}
+
 % \part{Ourselves}
 \chapter{Action}
 \input{Action.tex}
