--- a/Action.tex
+++ b/Action.tex
@@ -29,6 +29,12 @@ Idea, action, utterance.}{Marcus Aurelius}{}{}
 \smallQuote{MA_CREDIT}{Do what nature demands. Get a move on if you have it in you and don't worry whether anyone will give you any credit for it.
 And don't go expecting Plato's \say{Republic} either, just be satisfied with even the smallest progress.}{Marcus Aurelius}{}
 
+\smallQuote{LT_EN}{Acts and expects nothing,\newline
+accomplishes and does not linger\newline
+has no desire to seem worthy.}{Lao Tzu}{HT_CREDIT}
+
+\smallQuote{LT_CREDIT}{When no credit is taken, acomplishment endures}{Lao Tzu}{HT_CREDIT}
+
 \cleartorightpage
 \hugeQuote{RG_PROBLEM}{When you confront a problem}{ you begin to solve it.}{Rudy Guilliani}{BW_TALK}{}
 
