--- a/Gratitude.tex
+++ b/Gratitude.tex
@@ -11,6 +11,8 @@
 
 	Look at what you have, the things you value most and think how much you'd crave them if you didn't have them.}{Marcus Aurelius}{}{}
 
+\hugeQuote{LT_SIMPLE}{Look at plain silk}{; hold uncarved wood. The self dindles; desires fade.}{Lao Tzu}{} % maybe gratitude
+
 %% Awe
 \cleartoleftpage
 \hugeQuote{RWE_STARS}{If the stars were to appear but one night every thousand years}{ how man would marvel.}{Ralph Waldo Emerson}{}{}
