correct macro call for opening

--- a/project.tex
+++ b/project.tex
@@ -36,7 +36,7 @@
 \makeindex
 
 %todo review initial notes
-\newdateformat{duration}{May 2014 - \monthname[\THEMONTH] \THEYEAR}
+\newdateformat{duration}{March 2014 - \monthname[\THEMONTH] \THEYEAR}
 
 
 \title{Pointers and references}
@@ -55,7 +55,7 @@
 
 \cleartorightpage
 
-\HugeQuote{LT_GA}{Great accomplishment seems unfinished but its use is continuous.}{Lao Tzu}{}{}
+\HugeQuote{LT_GA}{Great achievement}{ seems unfinished but its use is continuous.}{Lao Tzu}{}{}
 
 % \part{Ourselves}
 \chapter{Action}
