add Watson quote
See "homely virtues" from 1903

--- a/Generosity.tex
+++ b/Generosity.tex
@@ -38,6 +38,8 @@ Mine: to be patient and cheeerful with everyone (including them)}{Marcus Aureliu
 
 \HugeQuote{DL_KINDNESS}{Show kindness whenever possible.}{}{Dalai Lama}{S_DO}{Hint: it's always possible.}
 
+%\hugeQuote{}{Be kind}{, everyone is fighting a hard battle.{John Watson}{}{} 
+
 
 \cleartoleftpage
 \hugeQuote{MA_MISTAKE}{That you've made enough mistakes yourself}{. You're just like them.}{Marcus Aurelius}{SL_GIVE}{}
