--- a/Action.tex
+++ b/Action.tex
@@ -4,44 +4,39 @@
 
 %courage to act
 
-\smallQuote{BD_ACT}{Action may not always bring happiness, but without action there is none.}{Benjamin Disraelli}{}
+\HugeQuote{BD_ACT}{Action}{ may not always bring happiness, but without action there is none.}{Benjamin Disraelli}{}
 
-\smallQuote{MG_ACT}{You may never know what results come from your action but if you do nothing there will be no result.}{Mahatma Ghandi}{}
+%\hugeQuote{MG_ACT}{You may never know}{ what results come from your action but if you do nothing there will be no result.}{Mahatma Ghandi}{}
 
 \cleartorightpage
-\HugeQuote{MG_AEP}{Action expresses priority}{}{Mahatma Ghandi}{}{}
+\HugeQuote{MG_AEP}{Action expresses priority.}{}{Mahatma Ghandi}{}{}
 
 
 \hugeQuote{FB_CWA}{Code wins.}{}{}{}{}
 \hugeQuote{LT_FAT}{Fac aut tace.}{}{}{}{Do or be silent.}
 \hugeQuote{RG_DDX}{Demonstrate}{\newline don't explicate.}{Robert Greene}{}{}
 \cleartorightpage
-\HugeQuote{YB_FORK}{When you come to a fork in the road}{, take it.}{Yogi Bera}{}{}
+\hugeQuote{YB_FORK}{When you come to a fork in the road}{, take it.}{Yogi Bera}{}{}
+\hugeQuote{RG_PROBLEM}{When you confront a problem}{ you begin to solve it.}{Rudy Guilliani}{BW_TALK}{}
 
 \cleartoleftpage
 %focus on what you can do 
-\smallQuote{MA_NOW2}{Stick to what's in front of you; \newline
-Idea, action, utterance.}{Marcus Aurelius}{}{}
-
-\smallQuote{MA_NOW1}{Each of us lives only now in this brief instant. The rest has been lived already or is impossible to see.}{Marcus Aurelius}{}
 
 
-\smallQuote{MA_CREDIT}{Do what nature demands. Get a move on if you have it in you and don't worry whether anyone will give you any credit for it.
+\HugeQuote{MA_CREDIT}{Do what nature demands}{. Get a move on if you have it in you and don't worry whether anyone will give you any credit for it.
 And don't go expecting Plato's \say{Republic} either, just be satisfied with even the smallest progress.}{Marcus Aurelius}{}
 
-\smallQuote{LT_EN}{Acts and expects nothing,\newline
-accomplishes and does not linger\newline
-has no desire to seem worthy.}{Lao Tzu}{HT_CREDIT}
+\HugeQuote{HT_CREDIT}{It's amazing what you can accomplish}{ if you don't care who gets the credit.}{Harry S Truman}{}{}
 
-\smallQuote{LT_CREDIT}{When no credit is taken, acomplishment endures}{Lao Tzu}{HT_CREDIT}
 
-\cleartorightpage
-\hugeQuote{RG_PROBLEM}{When you confront a problem}{ you begin to solve it.}{Rudy Guilliani}{BW_TALK}{}
-
-\hugeQuote{HT_CREDIT}{It's amazing what you can accomplish}{ if you don't care who gets the credit.}{Harry S Truman}{}{}
+% \smallQuote{LT_EN}{Acts and expects nothing,\newline
+% accomplishes and does not linger\newline
+% has no desire to seem worthy.}{Lao Tzu}{HT_CREDIT}
 
 \cleartorightpage
-\HugeQuote{JL_LIFE}{Life is what happens}{ while you are busy making other plans.}{John Lennon}{}{}
+\HugeQuote{LT_CREDIT}{When no credit is taken}{,\newline
+acomplishment endures.}{Lao Tzu}{HT_CREDIT}
+
 
 %consistency
 \cleartoleftpage
@@ -49,7 +44,9 @@ has no desire to seem worthy.}{Lao Tzu}{HT_CREDIT}
 
 \HugeQuote{MLK_HABIT}{If I cannot do great things}{ I can do small things in a great way.}{Martin Luther King Jr.}{}{}
 
-
+\cleartorightpage
+\HugeQuote{AR_HABIT}{Quality is not an act.}{\newline
+It is a habit.}{Aristotle}{}{}
 
 \cleartoleftpage
 
@@ -62,5 +59,4 @@ But the hardest thing of all is to act in accordance with your thinking.}{John V
 \HugeQuote{MR_ACT}{Although understanding the theory behind the action enables one to speak}{, it is the practice which enables one to act.}{Musonius Rufus}{}{}
 
 \cleartorightpage
-\HugeQuote{AR_HABIT}{Quality is not an act.}{\newline
-It is a habit.}{Aristotle}{}{}
+\HugeQuote{JL_LIFE}{Life is what happens}{ while you are busy making other plans.}{John Lennon}{}{}
