--- a/Focus.tex
+++ b/Focus.tex
@@ -46,6 +46,9 @@
 \smallQuote{MA_NRA}{No random actions, none not based on underlying principles.}{Marcus Aurelius}{}
 \smallQuote{BJ_DWYL}{If you're not doing what you love, you're wasting your time.}{Billy Joel}{OW_HW}
 
+%todo: position
+% \smallQuote{MA_NOW1}{Each of us lives only now in this brief instant. The rest has been lived already or is impossible to see.}{Marcus Aurelius}{}
+
 %todo: position ? 
 \hugeQuote{EP_FOOL}{If you wish to improve}{, be content to appear clueless or stupid in extraneous matters.}{Epictetus}{}{}
 
@@ -65,6 +68,8 @@ Ask yourself at every moment \say{is this necessary?}}
 
 \HugeQuote{LT_DL}{Choose one}{, reject the other.}{Lao Tzu}{}{}
 
+%\hugeQuote{MA_NOW2}{Stick to what's in front of you}{;\newline
+%Idea, action, utterance.}{Marcus Aurelius}{}{}
 
 % \hugeQuote{MA_OBSERVE}{And so I'll treat them as the law that binds us requires}{. With kindness and with justice.\newline And the inconsequential things?\newline I'll do my best to treat them as they deserve.}{Marcus Aurelius}{}{}
 % todo reposition 
