--- a/Resilience.tex
+++ b/Resilience.tex
@@ -146,7 +146,7 @@ Then you can learn endurance.}{Lao Tzu}{}
 %\smallQuote{LT_CH}{He who conquers others is strong.\newline
 %He who conquers himself is mighty.}{Lao Tzu}{}{} % todo update quote from my edition
 
-\smallQuote{LT_SL}{Knowing others is intelligent.\newline
+\smallQuote{LT_KTS}{Knowing others is intelligent.\newline
 Knowing yourself is enlightened.}{Lao Tzu}{}
 
 \cleartorightpage
