re-order focus chapter up to parkinson's law

--- a/Focus.tex
+++ b/Focus.tex
@@ -8,18 +8,15 @@
 
 %company and how you spend your time
 
-
-
 \smallQuote{LC_COMPANY}{You are whatever the company you keep is.}{Lord Chesterfield}{}{}
 \smallQuote{C_HONOR}{Let your mind dwell on examples of honour.}{Cicero}{}{} % cf machiavelli ?
 
 \smallQuote{RH_LIFERS}{Steer clear of lifers, the toxic and charlatans.\newline You become who you know.}{Ryan Holiday}{}
-\smallQuote{GBS_PIGS1}{Never wrestle with pigs, you both get dirty and the pig likes it.}{George Bernard Shaw}{RH_PIGS2}
 
 \smallQuote{PG_PB}{Relentlessly prune bullshit, don't wait to do things that matter, and savor the time you have. That's what you do when life is short\llink{http://www.paulgraham.com/vb.html}.}{Paul Graham}{}
 
 %todo: plenty of space above
-\cleartoleftpage
+\cleartorightpage
 \HugeQuote{T_GM}{From good men you will learn good things}{, if you mix with bad men you will destroy even your existing sense.}{Theognis}{}{} 
 
 \cleartorightpage
@@ -28,7 +25,7 @@
 
 \hugeQuote{H_OWN}{They should try to subordinate things to themselves}{ not themselves to things.}{Horace}{}{}
 
-\hugeQuote{FC_OWN}{The things you used to own}{. Now they own you}{Jack, Fight Club}{}{}
+\hugeQuote{FC_OWN}{The things you used to own}{. Now they own you.}{Jack, Fight Club}{}{}
 
 \cleartorightpage
 %todo reposition
@@ -42,18 +39,20 @@
 %task selection
 \cleartoleftpage	
 \smallQuote{DA_CDA}{You can do anything.\newline but you can't do everything.}{David Allen}{MA_SMALL}
-\smallQuote{BC_RYP}{Reaching your true potential involves choice. \newline How exactly you choose to excel is up to you.}{Brian Colbert}{}
-\smallQuote{MA_NRA}{No random actions, none not based on underlying principles.}{Marcus Aurelius}{}
-\smallQuote{BJ_DWYL}{If you're not doing what you love, you're wasting your time.}{Billy Joel}{OW_HW}
+% \smallQuote{BC_RYP}{Reaching your true potential involves choice. \newline How exactly you choose to excel is up to you.}{Brian Colbert}{}
+\smallQuote{UB_DL}{Photography is a subtractive process, you start with the whole world and finish with a small square of it.}{Uta Birth}{TF_SLO}
+\smallQuote{BJ_DWYL}{If you're not doing what you love,\newline
+you're wasting your time.}{Billy Joel}{OW_HW}
+\smallQuote{GBS_PIGS1}{Never wrestle with pigs, you both get dirty and the pig likes it.}{George Bernard Shaw}{RH_PIGS2}
 
 %todo: position
 % \smallQuote{MA_NOW1}{Each of us lives only now in this brief instant. The rest has been lived already or is impossible to see.}{Marcus Aurelius}{}
 
 %todo: position ? 
-\hugeQuote{EP_FOOL}{If you wish to improve}{, be content to appear clueless or stupid in extraneous matters.}{Epictetus}{}{}
 
-\hugeQuote{MT_NOMFUP}{NoMFuP}{}{Malcolm Tucker}{ST_UTU}{Handy to remind ourselves what we should be paying attention to.}
-
+\hugeQuote{MT_NOMFUP}{NoMFuP}{}{Malcolm Tucker}{ST_UTU}{}
+\hugeQuote{MA_NRA}{No random actions}{, none not based on underlying principles.}{Marcus Aurelius}{}{}
+\hugeQuote{EP_FOOL}{If you wish to improve}{, be content to appear clueless in extraneous matters.}{Epictetus}{}{}
 
 \cleartoleftpage
 \HugeQuote{TF_SLO}{Slow down}{ and remember this; most things make no difference. Being busy is a form of laziness. Lazy thinking and indiscriminate action.}{Tim Ferriss}{MA_DL}{
@@ -64,19 +63,21 @@ See: efficacy hacks\llink{http://bit.ly/1EDPjUQ} and a not to do list\llink{http
 Ask yourself at every moment \say{is this necessary?}}
 {Marcus Aurelius}{}{}
 
+\cleartoleftpage
 \HugeQuote{MA_SMALL}{You're better off not giving the small things more time than they deserve}{}{Marcus Aurelius}{}
 
-\HugeQuote{LT_DL}{Choose one}{, reject the other.}{Lao Tzu}{}{}
+\HugeQuote{PD_DL}{There is nothing so useless}{ as doing efficiently that which should not be done at all.}{Peter Drucker}{}{}
+
+\cleartorightpage
+\HugeQuote{LT_DL}{Choose one}{,\newline
+reject the other.}{Lao Tzu}{}{}
 
 %\hugeQuote{MA_NOW2}{Stick to what's in front of you}{;\newline
 %Idea, action, utterance.}{Marcus Aurelius}{}{}
 
 % \hugeQuote{MA_OBSERVE}{And so I'll treat them as the law that binds us requires}{. With kindness and with justice.\newline And the inconsequential things?\newline I'll do my best to treat them as they deserve.}{Marcus Aurelius}{}{}
 % todo reposition 
-\hugeQuote{UB_DL}{Photography is a subtractive process}{, you have the whole world and you select a small square of it.}{Uta Birth}{TF_SLO}{}
 
-
-\HugeQuote{PD_DL}{There is nothing so useless}{ as doing efficiently that which should not be done at all.}{Peter Drucker}{}{}
 
 \cleartoleftpage
 
