--- a/project.tex
+++ b/project.tex
@@ -11,7 +11,7 @@
 \usepackage[hidelinks]{hyperref}
 \usepackage{titlesec}
 \usepackage{makeidx}
-% \usepackage{microtype}
+\usepackage{microtype}
 \usepackage{dirtytalk}
 % \usepackage{showframe}
 \usepackage{datetime}
