re-order and apply some  edits to Focus chapter

--- a/Focus.tex
+++ b/Focus.tex
@@ -23,13 +23,13 @@
 \HugeQuote{PL_DST}{Don't spend time with people you don't like.}{}{Prue Leith}{}{}
 \cleartoleftpage
 
-\hugeQuote{H_OWN}{They should try to subordinate things to themselves}{ not themselves to things.}{Horace}{}{}
+\HugeQuote{H_OWN}{They should try to subordinate things to themselves}{ not themselves to things.}{Horace}{}{}
 
-\hugeQuote{FC_OWN}{The things you used to own}{. Now they own you.}{Jack, Fight Club}{}{}
+\HugeQuote{FC_OWN}{The things you used to own}{. Now they own you.}{Jack, Fight Club}{}{}
 
-\cleartorightpage
-%todo reposition
-\hugeQuote{FP_BACK}{It's a long road there's no turning back}{}{Funki Porcini}{}
+\cleartoleftpage
+
+\HugeQuote{FP_BACK}{It's a long road there's no turning back.}{}{Dr. Jeff Cameron}{} % Sampled by Funki Porcini
 
 \HugeQuote{HDT_BACK}{Never look back}{ unless you're planning to go that way.}{Henry David Thoreau}{}{}
 
@@ -40,16 +40,20 @@
 \cleartoleftpage	
 \smallQuote{DA_CDA}{You can do anything.\newline but you can't do everything.}{David Allen}{MA_SMALL}
 % \smallQuote{BC_RYP}{Reaching your true potential involves choice. \newline How exactly you choose to excel is up to you.}{Brian Colbert}{}
-\smallQuote{UB_DL}{Photography is a subtractive process, you start with the whole world and finish with a small square of it.}{Uta Birth}{TF_SLO}
+
 \smallQuote{BJ_DWYL}{If you're not doing what you love,\newline
 you're wasting your time.}{Billy Joel}{OW_HW}
-\smallQuote{GBS_PIGS1}{Never wrestle with pigs, you both get dirty and the pig likes it.}{George Bernard Shaw}{RH_PIGS2}
+
+\smallQuote{GBS_PIGS1}{Never wrestle with pigs,\newline
+you both get dirty and the pig likes it.}{George Bernard Shaw}{RH_PIGS2}
+
+\smallQuote{UB_DL}{Photography is a subtractive process, you start with the whole world and finish with a small square of it.}{Uta Birth}{TF_SLO}
 
 %todo: position
 % \smallQuote{MA_NOW1}{Each of us lives only now in this brief instant. The rest has been lived already or is impossible to see.}{Marcus Aurelius}{}
 
-%todo: position ? 
-
+ 
+\cleartorightpage
 \hugeQuote{MT_NOMFUP}{NoMFuP}{}{Malcolm Tucker}{ST_UTU}{}
 \hugeQuote{MA_NRA}{No random actions}{, none not based on underlying principles.}{Marcus Aurelius}{}{}
 \hugeQuote{EP_FOOL}{If you wish to improve}{, be content to appear clueless in extraneous matters.}{Epictetus}{}{}
@@ -64,9 +68,9 @@ Ask yourself at every moment \say{is this necessary?}}
 {Marcus Aurelius}{}{}
 
 \cleartoleftpage
-\HugeQuote{MA_SMALL}{You're better off not giving the small things more time than they deserve}{}{Marcus Aurelius}{}
+\HugeQuote{MA_SMALL}{You're better off not giving the small things more time than they deserve.}{}{Marcus Aurelius}{}
 
-\HugeQuote{PD_DL}{There is nothing so useless}{ as doing efficiently that which should not be done at all.}{Peter Drucker}{}{}
+\HugeQuote{PD_DL}{There is nothing so useless}{ as doing efficiently that which should not be done.}{Peter Drucker}{}{}
 
 \cleartorightpage
 \HugeQuote{LT_DL}{Choose one}{,\newline
@@ -78,40 +82,49 @@ reject the other.}{Lao Tzu}{}{}
 % \hugeQuote{MA_OBSERVE}{And so I'll treat them as the law that binds us requires}{. With kindness and with justice.\newline And the inconsequential things?\newline I'll do my best to treat them as they deserve.}{Marcus Aurelius}{}{}
 % todo reposition 
 
-
 \cleartoleftpage
-
-\HugeQuote{PL}{Parkinson's Law}{:\newline
-A task will swell in (perceived) importance and complexity in relation to the time allocated for its completion.}{}{}{}
 
 \hugeQuote{OW_HW}{Hard work}{ is simply the refuge of people how have nothing better to do}{Oscar Wilde}{}{}
 
 \hugeQuote{BD_LIFE}{A man is successful}{ if he gets up in the morning, goes to bed at night and in between does what he wants to.}{Bod Dylan}{BJ_DWYL}{}
 
-\smallQuote{WT_WORK}{It sounds a bit square, but I've found that the chances of getting a good result are just so much higher when you spend at least eight hours a day on your work.}{Wolfgang Tillmans}{}{}
+\cleartorightpage
+\HugeQuote{PL}{Parkinson's Law}{:\newline
+A task will swell in (perceived) importance and complexity in relation to the time allocated for its completion.}{}{}{}
 
 \cleartoleftpage
 
 \HugeQuote{MA_CUCUMBER}{The cucumber is bitter?}{\newline
 Then throw it out.\newline
-There are brambles in the path?\newline
+\newline
+Brambles in the path?\newline
 Then go around them.}{Marcus Aurelius}{PL_DST}{}
 
 %TODO: unsure on origin here but likely MA
-\HugeQuote{SP_HABIT}{Of each thought ask}{:
+\HugeQuote{SP_HABIT}{Test each thought}{; is it:
 \begin{itemize}
-\item is it necessary?
-\item is it harmful to others?
-\item is it true?
-\item is it self indulgent?
+\item true?
+\item necessary?
+\item self indulgent?
+\item harmful to others?
 \end{itemize}}{}{}{}
 
-\HugeQuote{MA_GOAL}{If you don't have a consistent goal in life}{, how can you live it in a consistent way?}{Marcus Aurelius}{}{}
+\cleartorightpage
 
-\hugeQuote{RH_PIGS2}{Never try to teach a pig to sing.}{ It wastes time and annoys the pig.}{Robert Heinlein}{GBS_PIGS1}{} 
+\HugeQuote{RH_6MONTHS}{In six months}{ you will have discarded most of what you claim is important right now.}{Ryan Holiday}{}{}
 
-\hugeQuote{RH_6MONTHS}{In six months}{ you will have discarded most of what you claim is important right now.}{Ryan Holiday}{}{}
+\cleartoleftpage
+
+\HugeQuote{WT_WORK}{It sounds a bit square}{, but I've found that the chances of getting a good result are just so much higher when you spend at least eight hours a day on your work.}{Wolfgang Tillmans}{}{}
 
 \cleartorightpage
-\HugeQuote{TF_HARD}{Sometimes the hard stuff is hard because you shouldn't do it in the first place}{}{Tim Ferriss}{}{}
+\HugeQuote{MA_GOAL}{If you don't have a consistent goal in life}{, how can you live it in a consistent way?}{Marcus Aurelius}{}{}
+
+\cleartoleftpage
+
+\HugeQuote{RH_PIGS2}{Never teach a pig to sing.}{\newline
+It wastes time and annoys the pig.}{Robert Heinlein}{GBS_PIGS1}{} 
+
+\cleartorightpage
+\HugeQuote{TF_HARD}{Sometimes the hard stuff is hard because you shouldn't do it in the first place.}{}{Tim Ferriss}{}{}
 
