--- a/PatienceIntro.tex
+++ b/PatienceIntro.tex
@@ -2,7 +2,7 @@
 { \small
 We know how important action is, but acting rashly, without care and attention can do serious harm to ourselves and can undo the progress we've made towards our aims.
 
-On this journey knowing where we're headed is more important than getting there quickly, especially when you consider that we may not even arrive. So we should consider that the manner in which we make the journey is at least as important as the desination.
+On this journey knowing where we're headed is more important than getting there quickly, especially when you consider that we may not even arrive. So we should consider that the way we make the journey is at least as important as the desination.
 
 To some patience can look like a lack of engagement or a lack of committment but there's often more harm done through an emotional (over) reaction (\S \ref{MA_GRIEF}) and we're only going to waste time and do everything badly if we act or speak angrily (\S \ref{BG_ANGER}).
 
