add School of Life quote
From "small pleasures"

--- a/Generosity.tex
+++ b/Generosity.tex
@@ -40,6 +40,7 @@ Mine: to be patient and cheeerful with everyone (including them)}{Marcus Aureliu
 
 %\hugeQuote{}{Be kind}{, everyone is fighting a hard battle.{John Watson}{}{} 
 
+%\smallQuote{SL_REBEL}{We'll always rebel against certain painful truths. And it's wise to admit this.}{School of Life}{} 
 
 \cleartoleftpage
 \hugeQuote{MA_MISTAKE}{That you've made enough mistakes yourself}{. You're just like them.}{Marcus Aurelius}{SL_GIVE}{}
