add quote from heracticlus

--- a/Humility.tex
+++ b/Humility.tex
@@ -54,6 +54,10 @@ When they change you should shift along with them.}{Ryan Holiday}{JKZ_ENDURE}{Th
 
 \hugeQuote{MA_CHANGE}{Remember that to change your mind}{ and accept correction are mere acts too.}{Marcus Aurelius}{BR_CHANGE}{and so, under our control}
 
+%TODO review for position
+%\hugeQuote{H_GOD}{To a god}{, the wisdom of the wisest man sounds apish.}{Heracticlus}{}{} 
+
+
 \hugeQuote{WS_FOOL}{The fool doth think he is wise and the wise man knows himself to be a fool}{}{William Shakespeare}{P_TALK}{}
 
 \hugeQuote{RG_CRITICISM}{Never be so self absorbed}{ as to believe that the master is interested in your criticisms of him, now matter how accurate they are.}{Robert Greene}{}{but always be ready to listen and use the criticism you hear.}
