reduce attribution of the Computerised space probe from Futurama to help with layout

--- a/Leadership.tex
+++ b/Leadership.tex
@@ -128,5 +128,5 @@ Reward results}{BAML}{}{}
 \hugeQuote{LR_WORK}{It takes a great talent and skill}{ to conceal a great talent and skill.}{François de La Rochefoucauld}{M_WORK}{}
 
 \cleartorightpage
-\HugeQuote{FR_DTR}{When you do things right}{, people will wonder if you've done anything at all}{Remains of a computerised space probe, Futurama}{}{} 
+\HugeQuote{FR_DTR}{When you do things right}{, people will wonder if you've done anything at all}{Computerised space probe, Futurama}{}{} 
 
