add homely virtues to books list

--- a/Books.tex
+++ b/Books.tex
@@ -7,6 +7,7 @@
   \bibitem{T}    The Talmud - Norman Solomon - Penguin Classics
   \bibitem{EE}   Enchiridion - Epictetus - Dover thrift editions
   \bibitem{SCM}  Counsels and Maxims - Arthur Schopenhauer - Start Publishing
-  \bibitem{TTC}  Tao Te Ching (Stephen Addiss and Stanley Lonbardo) - Lao Tzu - Hackett Publishing 
+  \bibitem{TTC}  Tao Te Ching (Stephen Addiss and Stanley Lonbardo) - Lao Tzu - Hackett Publishing % Steven Mitchell translation recommended
+  \bibitem{HV}   Homely Virtues - John Watson - Forgotten Books
 
 \end{thebibliography}
