include conclusion chapter

--- a/project.tex
+++ b/project.tex
@@ -75,6 +75,9 @@
 \chapter{Leadership}
 \input{Leadership.tex}
 
+\chapter{Conclusion}
+\input{Conclusion}
+
 % \part{Notes}
 
 \refstepcounter{chapter}
