--- a/Conclusion.tex
+++ b/Conclusion.tex
@@ -1,11 +1,14 @@
 \cleardoublepage
 { \small
 
-Time is desperately short, so taking the time to work on this project, to make this journey, must be important. Thinking about these qualities and how they relate to each other and our lives must have an important impact on our lives. 
+We’re not idiots. We know that time is desperately short, so taking the time to work on this project, to make this journey, must be important to us. Picking up this collection when we’re struggling for the right course of action or taking a step back to think about these qualities and how they relate to each other and our lives must have an important impact. That process must produce some important result. 
 
-But the notes here are not important, they won't stop tragedies, they won't make us perfect parents, partners or friends, they certainly can't make the sun shine when we're at the beach. The words here are just pointers and references to what we should be aiming at. The notes here are just words, just ideas, but without giving them agency in the real world, without using them to shape our actions and responses we have no way to help ourselves and those around us. 
+But the notes here are not important, they won't stop tragedies, they won't make us perfect parents, partners or friends. They can't make the sun shine when we're at the beach. The words here are pointers and references to what we should be aiming at but they are just words, just ideas, but without giving them agency in the real world, without using them to shape our actions and responses they have no value. It is through us that they gain value, it is us who use the ideas and put them into practice. Without us this book has no way to do anything for us or those around us. 
 
-Without daily practice of the qualities we've covered here the notes here are truly are wasted they truly are nothing. 
+Without continual practice of the qualities we've touched on here the notes here are truly are wasted on us they truly are nothing. 
+
+
+
 
 
 }
